--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "browserslist": "^4.21.5",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
+    "rc-notification": "4.4.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
