--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "ahooks": "^3.7.2",
+    "ali-react-table": "^2.6.1",
     "antd": "^5.21.6",
     "bignumber.js": "^9.1.0",
     "browserslist": "^4.21.5",
+    "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
     "prism-react-renderer": "^2.4.0",
@@ -83,6 +85,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "styled-components": "^6.1.13"
   }
 }
