--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.4.2",
+    "rehype-raw": "^7.0.0",
     "styled-components": "^6.1.13"
   }
 }
