双色球和福彩3D页新增图表分析弹框页

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^6.3.1",
+    "@types/echarts": "^4.9.22",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.20",
     "@types/react-beautiful-dnd": "^13.1.8",
@@ -79,6 +80,7 @@
     "browserslist": "^4.21.5",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
     "lodash-es": "^4.17.21",
     "prism-react-renderer": "^2.4.0",
     "rc-notification": "4.4.0",
