--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.4.2",
     "rehype-raw": "^7.0.0",
